add API routes to the swagger
