# backend/internal/controller/category.go
@@ -10,6 +10,13 @@ import (
 	"gorm.io/gorm"
 )
 
+// @Summary		Récupère toutes les catégories
+// @Description	Récupère toutes les catégories
+// @ID				get-all-categories
+// @Tags			Categories
+// @Produce		json
+// @Success		200	{array}	models.Category
+// @Router			/categories [get]
 func GetAllCategories(c echo.Context) error {
 	db := database.GetDB()
 	var categories []models.Category
@@ -17,6 +24,14 @@ func GetAllCategories(c echo.Context) error {
 	return c.JSON(http.StatusOK, categories)
 }
 
+// @Summary		Récupère une catégorie
+// @Description	Récupère une catégorie par ID
+// @ID				get-category
+// @Tags			Categories
+// @Produce		json
+// @Param			id	path		string	true	"ID de la catégorie"
+// @Success		200	{object}	models.Category
+// @Router			/categories/{id} [get]
 func GetCategory(c echo.Context) error {
 	db := database.GetDB()
 	id := c.Param("id")
@@ -25,6 +40,13 @@ func GetCategory(c echo.Context) error {
 	return c.JSON(http.StatusOK, category)
 }
 
+// @Summary		Créé une catégorie
+// @Description	Créé une catégorie
+// @ID				create-category
+// @Tags			Categories
+// @Produce		json
+// @Success		200	{array}	models.Category
+// @Router			/categories [post]
 func CreateCategory(c echo.Context) error {
 	db := database.GetDB()
 	category := new(models.Category)
@@ -35,23 +57,18 @@ func CreateCategory(c echo.Context) error {
 	return c.JSON(http.StatusCreated, category)
 }
 
-// update PUT
-// func UpdateCategory(c echo.Context) error {
-// 	db := database.GetDB()
-// 	id := c.Param("id")
-// 	category := new(models.Category)
-// 	db.First(&category, id)
-// 	if err := c.Bind(category); err != nil {
-// 		return err
-// 	}
-// 	db.Save(&category)
-// 	return c.JSON(http.StatusOK, category)
-// }
-
 type CategoryPatchInput struct {
 	Name *string `json:"name"`
 }
 
+// @Summary		Modifie une catégorie
+// @Description	Modifie une catégorie par ID
+// @ID				update-category
+// @Tags			Categories
+// @Produce		json
+// @Param			id	path		string	true	"ID de la catégorie"
+// @Success		200	{object}	models.Category
+// @Router			/categories/{id} [patch]
 func UpdateCategory(c echo.Context) error {
 	db := database.GetDB()
 	id := c.Param("id")
@@ -87,6 +104,14 @@ func UpdateCategory(c echo.Context) error {
 	return c.JSON(http.StatusOK, category)
 }
 
+// @Summary		Supprime une catégorie
+// @Description	Supprime une catégorie par ID
+// @ID				delete-category
+// @Tags			Categories
+// @Produce		json
+// @Param			id	path		string	true	"ID de la catégorie"
+// @Success		204
+// @Router			/categories/{id} [delete]
 func DeleteCategory(c echo.Context) error {
 	db := database.GetDB()
 	id := c.Param("id")
