# backend/internal/controller/concert.go
@@ -10,6 +10,13 @@ import (
 	"gorm.io/gorm"
 )
 
+// @Summary		Récupère tous les concerts
+// @Description	Récupère tous les concerts
+// @ID				get-all-concerts
+// @Tags			Concerts
+// @Produce		json
+// @Success		200	{array}	models.Concert
+// @Router			/concerts [get]
 func GetAllConcerts(c echo.Context) error {
 	db := database.GetDB()
 	var concerts []models.Concert
@@ -17,6 +24,14 @@ func GetAllConcerts(c echo.Context) error {
 	return c.JSON(http.StatusOK, concerts)
 }
 
+// @Summary		Récupère un concert
+// @Description	Récupère un concert par ID
+// @ID				get-concert
+// @Tags			Concerts
+// @Produce		json
+// @Param			id	path		string	true	"ID du concert"
+// @Success		200	{object}	models.Concert
+// @Router			/concerts/{id} [get]
 func GetConcert(c echo.Context) error {
 	db := database.GetDB()
 	id := c.Param("id")
@@ -30,6 +45,13 @@ func GetConcert(c echo.Context) error {
 	return c.JSON(http.StatusOK, concert)
 }
 
+// @Summary		Créé un concert
+// @Description	Créé un concert
+// @ID				create-concert
+// @Tags			Concerts
+// @Produce		json
+// @Success		201	{object}	models.Concert
+// @Router			/concerts [post]
 func CreateConcert(c echo.Context) error {
 	db := database.GetDB()
 	concert := new(models.Concert)
@@ -45,6 +67,14 @@ func CreateConcert(c echo.Context) error {
 	return c.JSON(http.StatusOK, concert)
 }
 
+// @Summary		Modifie un concert
+// @Description	Modifie un concert par ID
+// @ID				update-concert
+// @Tags			Concerts
+// @Produce		json
+// @Param			id	path		string	true	"ID du concert"
+// @Success		200	{object}	models.Concert
+// @Router			/concerts/{id} [patch]
 func UpdateConcert(c echo.Context) error {
 	db := database.GetDB()
 	id := c.Param("id")
@@ -64,6 +94,14 @@ func UpdateConcert(c echo.Context) error {
 	return c.JSON(http.StatusOK, concert)
 }
 
+// @Summary		Supprime un concert
+// @Description	Supprime un concert par ID
+// @ID				delete-concert
+// @Tags			Concerts
+// @Produce		json
+// @Param			id	path	string	true	"ID du concert"
+// @Success		204
+// @Router			/concerts/{id} [delete]
 func DeleteConcert(c echo.Context) error {
 	db := database.GetDB()
 	id := c.Param("id")
